# Android_SDL_Project_Template

./: README.md  local.properties
app/: build.gradle
app/jni/src/: Android.mk  CMakeLists.txt  main.c
